; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_main.c_sapi_cgibin_single_write.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_main.c_sapi_cgibin_single_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fpm_is_running = common dso_local global i64 0, align 8
@server_context = common dso_local global i32 0, align 4
@FCGI_STDOUT = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@STDOUT_FILENO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i32)* @sapi_cgibin_single_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @sapi_cgibin_single_write(i8* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i64, i64* @fpm_is_running, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %2
  %11 = load i32, i32* @server_context, align 4
  %12 = call i64 @SG(i32 %11)
  %13 = inttoptr i64 %12 to i32*
  store i32* %13, i32** %7, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* @FCGI_STDOUT, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = call i64 @fcgi_write(i32* %14, i32 %15, i8* %16, i32 %17)
  store i64 %18, i64* %6, align 8
  %19 = load i64, i64* %6, align 8
  %20 = icmp sle i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %10
  store i64 0, i64* %3, align 8
  br label %30

22:                                               ; preds = %10
  %23 = load i64, i64* %6, align 8
  store i64 %23, i64* %3, align 8
  br label %30

24:                                               ; preds = %2
  %25 = load i8*, i8** %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @MIN(i32 %26, i32 16384)
  %28 = load i32, i32* @stdout, align 4
  %29 = call i64 @fwrite(i8* %25, i32 1, i32 %27, i32 %28)
  store i64 %29, i64* %3, align 8
  br label %30

30:                                               ; preds = %24, %22, %21
  %31 = load i64, i64* %3, align 8
  ret i64 %31
}

declare dso_local i64 @SG(i32) #1

declare dso_local i64 @fcgi_write(i32*, i32, i8*, i32) #1

declare dso_local i64 @fwrite(i8*, i32, i32, i32) #1

declare dso_local i32 @MIN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
